Prevent widgets from overlapping.

--- a/app/assets/stylesheets/partials/board.css.sass
+++ b/app/assets/stylesheets/partials/board.css.sass
@@ -1,5 +1,5 @@
 .board
-  border: 1px dashed $black
+  // border: 1px dashed $black
   width: 3840px
   height: 2160px
 
